Attempted fix for copy positioning on mobile

--- a/app/assets/stylesheets/edit.scss
+++ b/app/assets/stylesheets/edit.scss
@@ -24,6 +24,8 @@
     .header__copy-anchor {
       position: absolute;
       left: calc(100% + 1rem);
+      top: 0;
+      height: 100%;
       display: flex;
       align-items: center;
     }
